crates/cruster/tests/ui/persisted_state_requires_serde.stderr
error[E0277]: the trait bound `BadState: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/persisted_state_requires_serde.rs:13:1
   |
13 | #[entity_impl]
   | ^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `BadState`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadState` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `from_slice`
  --> $CARGO/rmp-serde-$VERSION/src/decode.rs
   |
   | pub fn from_slice<'a, T>(input: &'a [u8]) -> Result<T, Error>
   |        ---------- required by a bound in this function
   | where
   |     T: Deserialize<'a>,
   |        ^^^^^^^^^^^^^^^ required by this bound in `from_slice`
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BadState: Clone` is not satisfied
  --> tests/ui/persisted_state_requires_serde.rs:13:1
   |
13 | #[entity_impl]
   | ^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `BadState`
   |
note: required by a bound in `StateMutGuard::<S>::new`
  --> src/state_guard.rs
   |
   |     S: Clone + Serialize + DeserializeOwned + Send + Sync + 'static,
   |        ^^^^^ required by this bound in `StateMutGuard::<S>::new`
...
   |     pub fn new(
   |            --- required by a bound in this associated function
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BadState: serde::Serialize` is not satisfied
  --> tests/ui/persisted_state_requires_serde.rs:13:1
   |
13 | #[entity_impl]
   | ^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `BadState`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `BadState` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `StateMutGuard::<S>::new`
  --> src/state_guard.rs
   |
   |     S: Clone + Serialize + DeserializeOwned + Send + Sync + 'static,
   |                ^^^^^^^^^ required by this bound in `StateMutGuard::<S>::new`
...
   |     pub fn new(
   |            --- required by a bound in this associated function
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `BadState: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/persisted_state_requires_serde.rs:13:1
   |
13 | #[entity_impl]
   | ^^^^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `BadState`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `BadState` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `BadState` to implement `DeserializeOwned`
note: required by a bound in `StateMutGuard`
  --> src/state_guard.rs
   |
   | pub struct StateMutGuard<S>
   |            ------------- required by a bound in this struct
   | where
   |     S: Clone + Serialize + DeserializeOwned + Send + Sync + 'static,
   |                            ^^^^^^^^^^^^^^^^ required by this bound in `StateMutGuard`
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
